--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,11 @@ github_username:  aolarte
 
 # Build settings
 markdown: kramdown
+
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+      type: "posts"
+    values:
+      comments: true
